Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-09-23 Kimmo
 Couple of type fixes to CMoveConstraint
  Src/Common: CMoveConstraint.cpp CMoveConstraint.h

2006-09-22 Kimmo
 PATCH: [ 1563157 ] Fix coretools.cpp for 64-bit
  Src/Common: coretools.cpp coretools.h
 Fix type in ccrystaltextbuffer.h
  Src/editlib: ccrystaltextbuffer.h
 PATCH: [ 1563171 ] Catalan translation update
  Submitted by Jordi Vilar
   Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1563386 ] Spanish translation update
  Submitted by Jesus M. Delgado 'Mack'
   Src/Languages/Spanish: MergeSpanish.rc
 Quiet warnings from DiffList.cpp
  Src: DiffList.cpp
 Some SPECIAL_ITEM_POS cleanups
  Src: DirActions.cpp DirDoc.cpp DirView.cpp DirView.h
 Fix check for pointer/value by using bit-shift instead of a cast
  Src: GhostTextBuffer.h
  Src/editlib: ccrystaltextbuffer.h

2006-09-21 WinMerge experimental release 2.5.7.1 (SVN revision 3600)

2006-09-21 Kimmo
 PATCH: [ 1558213 ] Tweak text positions in splash screen
  Src: Splash.cpp
 Bump ShellExtension version to 1.9.0 (first 64-bit Windows version)
  ShellExtension: ShellExtension.rc
 Fix 64-bit typecast warning
  Src: GhostTextBuffer.h
 Fix 64-bit pointer truncation in SetWindowLongPtr call (the last I hope)
  Src: ChildFrm.cpp
 Minor tweaks to 64-bit ShellExtension project file
  ShellExtension: ShellExtensionX64.vcproj

2006-09-20 Kimmo
 PATCH: [ 1561788 ] Fix 64-bit CFile constructor usage
  Src/Common: UniFile.cpp
 PATCH: [ 1561796 ] Get/SetWindowLong not supported in 64-bit Windows
  Src: 7zCommon.cpp ChildFrm.cpp
  Src/Common: CSubclass.cpp sizecbar.cpp
 BUG: [ 1561781 ] 64-bit compile errors from 7zCommon.cpp
  Src: 7zCommon.cpp
 PATCH: [ 1561650 ] Separate FilterCommentsManager code from DiffWrapper
  Src: DiffWrapper.cpp DiffWrapper.h Merge.dsp
  Src new files: FilterCommentsManager.cpp FilterCommentsManager.h