@@ -5,6 +5,9 @@ Add new items to top.
 2006-09-23 Kimmo
  Couple of type fixes to CMoveConstraint
   Src/Common: CMoveConstraint.cpp CMoveConstraint.h
+ Fix check for pointer/value by using bit-shift instead of a cast + add trivial typecasts
+  Src: GhostTextBuffer.cpp
+  Src/editlib: ccrystaltextbuffer.cpp
 
 2006-09-22 Kimmo
  PATCH: [ 1563157 ] Fix coretools.cpp for 64-bit
